Setting the Disqus shortname

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ google_plus_one_size: small
 # delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: 'vfsvp-fr'
+disqus_short_name: 'vfsvp'
 disqus_show_comment_count: true
 
 # Google Analytics
