Adding the twitter aside in the config

--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,7 @@ titlecase: false       # Converts page and post titles to titlecase
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
 default_asides:
 - custom/asides/about.html
+- custom/asides/twitter.html
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
