--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 url: http://vfsvp.fr
 title: VF svp
-subtitle: En français dans le texte
-author: Simon Courtois (simonc)
+subtitle:
+author: Simon Courtois (@simonc)
 simple_search: http://google.com/search
 description: "Articles techniques anglais en version française"
 
@@ -54,6 +54,7 @@ titlecase: false       # Converts page and post titles to titlecase
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
 default_asides:
 - custom/asides/about.html
+- custom/asides/search.html
 - custom/asides/twitter.html
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
@@ -72,7 +73,7 @@ twitter_tweet_button: true
 
 # Google +1
 google_plus_one: true
-google_plus_one_size: small
+google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
